...

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tour_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_today_black_24dp"
                android:drawablePadding="10dp"
                android:ems="6"
                android:hint="@string/tour_date"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

        <AutoCompleteTextView
            android:id="@+id/summit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_landscape_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/summit_name_hint"
            android:importantForAutofill="no"
...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icons8_map_pinpoint_20"
                android:drawablePadding="10dp"
                android:hint="@string/kilometers_hint"
                android:layout_toStartOf="@id/kilometers_text"
...

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/height_meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_trending_up_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/height_meter_hint"
                android:layout_toStartOf="@id/height_meter_text"
...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/btnCancel"
                android:backgroundTint="@color/green_500"
                android:text="@string/saveButtonText" />
...
