<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="X"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/barChartSpinnerXAxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_weight="5"
        app:layout_constraintStart_toEndOf="@+id/X"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/choose_data_source"
        android:src="@drawable/baseline_today_black_24dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerXAxis" />

    <Spinner
        android:id="@+id/barChartSpinnerMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/calender"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerXAxis" />

    <TextView
        android:id="@+id/Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerMonth" />

    <Spinner
        android:id="@+id/barChartSpinnerYAxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        app:layout_constraintStart_toEndOf="@+id/Y"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerMonth" />

    <TextView
        android:id="@+id/Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Z"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerYAxis" />

    <Spinner
        android:id="@+id/barChartSpinnerZAxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        app:layout_constraintStart_toEndOf="@+id/Z"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerYAxis" />

    <CheckBox
        android:id="@+id/includeFilteredDailyActivitySummaries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_not_persisted_activities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChartSpinnerZAxis" />

    <de.drtobiasprinz.summitbook.ui.utils.CustomBarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeFilteredDailyActivitySummaries" />
</androidx.constraintlayout.widget.ConstraintLayout>