...
            android:title="@string/segments" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_diagrams"
            android:icon="@drawable/ic_baseline_multiline_chart_24"
            android:title="@string/nav_diagrams" />
        <item
            android:id="@+id/nav_barChart"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/bar_charts" />
        <item
            android:id="@+id/nav_diashow"
            android:icon="@drawable/ic_baseline_photo_album_24"
            android:title="@string/nav_diashow" />
...
