<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_win"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/spinnerAxisImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/choose_data_source"
        android:src="@drawable/baseline_trending_up_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerXAxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/spinnerAxisImage"
        app:layout_constraintTop_toTopOf="parent" />

    <de.drtobiasprinz.summitbook.ui.utils.CustomLineChartWithMarker
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAxisImage" />
</androidx.constraintlayout.widget.ConstraintLayout>